--- a/config
+++ b/config
@@ -1,7 +1,8 @@
 #!/bin/bash 
  
  # The relative path to the directory, containing binary executables: 
- binpath='./build/release/bin'
+binpath='./build/release/bin'
+#binpath='./build/debug/bin'
  
  # The relative path to the directory, containing math sources:
  mathpath='./math'
