--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -315,7 +315,7 @@ AM_CPPFLAGS = \
 	$(BOOST_CPPFLAGS)
 
 AM_LDFLAGS = \
-	-all-static \
+	-static \
     $(BOOST_LDFLAGS) \
     $(PTHREAD_CFLAGS)	
 
