--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,6 +43,7 @@ else()
 		rus/rus_ast.cpp 
 		rus/rus_memvol.cpp 
 		rus/rus_show.cpp 
+		rus/rus_test.cpp 
 		rus/rus_translate.cpp 
 		rus/rus_verify.cpp 
 		rus/rus_xml.cpp 
