--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,6 +36,7 @@ else()
 		rus/prover/rus_prover_index.cpp
 		rus/prover/rus_prover_node.cpp
 		rus/prover/rus_prover_proof.cpp
+		rus/prover/rus_prover_show.cpp
 		rus/prover/rus_prover_space.cpp
 		rus/prover/rus_prover_tactics.cpp
 		rus/rus_expr.cpp 
