--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -51,6 +51,7 @@ else()
 		rus/prover/rus_prover_unify.cpp	
 		rus/prover/rus_prover_flat_term.cpp
 		rus/prover/rus_prover_flat_subst.cpp
+		rus/prover/rus_prover_multy_subst.cpp
 		rus/prover/trie_index/rus_prover_trie_index.cpp
 		rus/prover/trie_index/rus_prover_trie_matrix_index.cpp
 		rus/prover/trie_index/rus_prover_trie_unify.cpp
