--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,6 +53,7 @@ else()
 		rus/prover/unify/rus_prover_unify_vector.cpp
 		rus/prover/unify/rus_prover_unify_matrix.cpp
 		rus/prover/unify/rus_prover_unify_general.cpp
+		rus/prover/unify/rus_prover_unify_step.cpp
 		rus/prover/unify/rus_prover_unify.cpp
 
 		rus/rus_ast.cpp
