--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,6 +38,7 @@ else()
 		rus/parser/rus_parser.cpp 
 		
 		rus/prover/rus_prover_cartesian.cpp
+		rus/prover/rus_prover_compare.cpp
 		rus/prover/rus_prover_down.cpp
 		rus/prover/rus_prover_node.cpp
 		rus/prover/rus_prover_proof.cpp
