--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -65,6 +65,7 @@ else()
 
 		rus/transform/rus_transform_factor_subproofs.cpp
 		rus/transform/rus_transform_rem_dupsteps.cpp
+		rus/transform/rus_transform_rem_proof_shortcuts.cpp
 		rus/transform/rus_transform_rem_unused_hyps.cpp
 
 		rus/rus_ast.cpp
